--- a/style.css
+++ b/style.css
@@ -39,7 +39,13 @@
 .nav-loc {
     height: 50px;
     width: 90.56px;
+    text-align: center;
     /* margin-top: 10px; */
+}
+
+.loc-icon {
+    /* height: 22px; */
+    margin-left: -20px;
 }
 
 .add-text {
@@ -50,14 +56,15 @@
 }
 
 .loc-icon-country {
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
+    text-align: center;
 }
 
 .add-country {
     color: #FFFFFF;
     font-size: 14px;
-    margin-left: 6px;
+    margin-left: 2px;
     font-weight: 600;
 }
 
@@ -222,10 +229,12 @@ a {
 .main-section {
     background-image: url('./images/main-bg.jpg');
     height: 600px;
-    background-size: cover;
+    background-size: contain;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    flex-direction: column;
+    background-repeat: no-repeat;
 }
 
 .main-section .web-info{
@@ -236,9 +245,41 @@ a {
     font-size: 14px;
     align-items: center;
     justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: #0F1111;
+    font-weight: 300;
 }
 
 .web-info a {
     text-decoration: none;
     color: #007185;
+}
+
+.box-row1 {
+    background: linear-gradient(transparent,#b29ada, #e3e6e6);
+    width: 100%;
+    height: 420px;
+    margin-top: 20px;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: space-evenly;
+    margin-bottom: -100px;
+}
+
+.container2 {
+    background-color: #e3e6e6;
+    height: 1000px;
+}
+
+.box {
+    background-color: #ffffff;
+    /* background-color: gray; */
+    border: 2px solid black;
+    height: 420px;
+    width: 23%;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
