--- a/style.css
+++ b/style.css
@@ -256,6 +256,10 @@ a {
     color: #007185;
 }
 
+.web-info a:hover {
+    text-decoration: underline solid  rgb(211, 56, 0);
+    color: rgb(211, 56, 0);
+}
 .box-row1 {
     background: linear-gradient(transparent,#b29ada, #e3e6e6);
     width: 100%;
@@ -295,6 +299,7 @@ a {
     height: 40%;
     width: 90%;
     margin-top: 10px;
+    cursor: pointer;
 }
 
 .img-product1 {
@@ -315,6 +320,7 @@ a {
     height: 40%;
     width: 90%;
     margin-top: 10px;
+    cursor: pointer;
 }
 
 .img-product2 {
@@ -324,7 +330,7 @@ a {
     background-size: cover;
 }
 
-.see-more-link {
+.color-with-underline-link {
     height: 8%;
     width: 90%;
     display: flex;
@@ -332,14 +338,69 @@ a {
     margin-top: 5%;
 }
 
-.see-more-link a {
+.color-with-underline-link a {
    padding: 0px;
    text-decoration: none;
    font-size: 14px;
    color: #007185;
 }
 
-.see-more-link a:hover {
+.color-with-underline-link a:hover {
     text-decoration: underline solid  rgb(211, 56, 0);
     color: rgb(211, 56, 0);
+ }
+
+ .product {
+    /* background-color: blue; */
+    height: 82%;
+    width: 90%;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+ }
+
+ .img-product5 {
+    background-image: url('./images/product5.jpg');
+    width: 100%;
+    height: 100%;
+    margin: auto;
+ }
+
+ .img-product6 {
+    background-image: url('./images/product6.jpg');
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-size: cover;
+    background-position-x: -70px;
+ }
+
+ .color-with-nounderline-link {
+    height: 8%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    margin-top: 5%;
+}
+
+.color-with-nounderline-link a {
+   padding: 0px;
+   text-decoration: none;
+   font-size: 14px;
+   color: #007185;
+}
+
+.color-with-nounderline-link a:hover {
+    text-decoration: none;
+    color:  rgb(211, 56, 0);
+ }
+
+ .img-product7 {
+    background-image: url('./images/product7.jpg');
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-size: cover;
+    background-position-x: -60px;
  }
